# E3ISD1-SW

./: .gitignore  .gitmodules  README.md
Experiments/Catch2_setup/: CMakeLists.txt  CatchMain.cpp  answer.cpp  answer.h  main.cpp  test_answer.cpp
Experiments/GottschlingC++/Ch1_01/: CMakeLists.txt  main.cpp
Experiments/GottschlingC++/Ch1_06/: CMakeLists.txt  main.cpp
Experiments/GottschlingC++/Ch1_07/: CMakeLists.txt  main.cpp
Experiments/GottschlingC++/Ch1_08/: CMakeLists.txt  main.cpp
Experiments/GottschlingC++/Ch2_01/: CMakeLists.txt  main.cpp
u35_1/: CMakeLists.txt  main.cpp
u35_2/: CMakeLists.txt  main.cpp  options.cpp  options.h
u36_1/: CMakeLists.txt  Options.cpp  Options.h  main.cpp
u36_2/: CMakeLists.txt  Options.h  main.cpp
u37_1/: CMakeLists.txt  Options.cpp  Options.h  main.cpp
u37_2/: CMakeLists.txt  Options.cpp  Options.h  main.cpp
u38_1/: CMakeLists.txt  Options.cpp  Options.h  OptionsChars.h  OptionsKeywords.cpp  OptionsKeywords.h  main.cpp
u38_2/: CMakeLists.txt  Options.cpp  Options.h  OptionsChars.cpp  OptionsChars.h  OptionsKeywords.cpp  OptionsKeywords.h  main.cpp
